# rules_haskell_extra_srcs

./: BUILD.bazel  Foo.hs  README.md  WORKSPACE.bazel
