load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_toolchain_library",
)

haskell_library(
    deps = [
        ":base",
        "@stackage//:file-embed",
    ],
    extra_srcs = [
        "README.md",
    ],
    name = "foo",
    srcs = [
        "Foo.hs",
    ]
)

haskell_toolchain_library(
    name = "base",
)
