load(
    "@bazel_skylib//rules:write_file.bzl",
    "write_file",
)

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_toolchain_library",
)

haskell_library(
    deps = [
        ":base",
    ],
    name = "foo",
    srcs = [
        "Bar.hs",
        "Foo.hs",
    ]
)

haskell_toolchain_library(
    name = "base",
)

write_file(
    content = [
        "module Bar where",
        "bar :: String",
        "bar = \"bar\"",
    ],
    name = "bar",
    out = "Bar.hs",
)
