workspace(
    name = "rules_haskell_extra_srcs",
)

load(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "rules_haskell",
    sha256 = "18b54c0960c7e60c20f113af53fed5460c6f8d7d6337476d9500bbab81a485df",
    strip_prefix = "rules_haskell-b1cea20863b62053619e2902746657f3c4c9ac9b",
    urls = [
        "https://github.com/tweag/rules_haskell/archive/b1cea20863b62053619e2902746657f3c4c9ac9b.zip",
    ],
)

load(
    "@rules_haskell//haskell:repositories.bzl",
    "rules_haskell_dependencies",
)

rules_haskell_dependencies()

load(
    "@rules_haskell//haskell:toolchain.bzl",
    "rules_haskell_toolchains",
)

rules_haskell_toolchains(
    version = "8.6.5",
)

load(
    "@rules_haskell//haskell:cabal.bzl",
    "stack_snapshot",
)

stack_snapshot(
    name = "stackage",
    packages = [
        "file-embed",
    ],
    snapshot = "lts-13.26",
)
